# percolation-nucleation

./: README.md  main.py  nucleation.py  percolation.py  pyproject.toml
