[tool.poetry]
name = "404"
version = "0.1.0"
description = ""
authors = ["Nathan MAESTRACCI <maestracnathan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
